# triton-tvm

./: CMakeLists.txt  Makefile  README.md  hi.py
.github/workflows/: README.md  ci.yml  lint.yml  release.yml
backend/: compiler.py  driver.py
docs/: triton_gpu_to_tvm_conversion.md
example/: add.tir.py  softmax.tir.py
lib/Conversion/: LowerToTensorIdioms.cpp  MaterializeTensorsToTVMBuffers.cpp  ReplaceTritonPointersWithMemRefs.cpp
lib/Dialect/TVM/Transforms/: ConvertToTVMScript.cpp
